--- a/src/pug/structure/_footer.pug
+++ b/src/pug/structure/_footer.pug
@@ -1,6 +1,6 @@
 .ticket__footer
     small Autorizado mediante resolución N°1055/SUNAT.
-    small Consulte la válidez de este comprobante en <a href="http://e-facturas.delusa.pe/">e-facturas.delusa.pe</a>
+    small Consulte la válidez de este comprobante en <a href="https://e-consulta.sunat.gob.pe/ol-ti-itconsvalicpe/ConsValiCpe.htm">e-consulta.sunat.gob.pe/ol-ti-itconsvalicpe/ConsValiCpe.htm</a>
     br
     strong ~ DIMEXSA ~
     address Gracias por tu preferencia
