--- a/src/pug/structure/_header.pug
+++ b/src/pug/structure/_header.pug
@@ -1,10 +1,17 @@
 - var ColSpan = "3";
 .ticket__header
     .ticket__header-logo
-        img(src="images/dimexsa.png")
+        img(src="images/logo.png")
     .ticket__header-description
-        strong DIMEXSA S.A.C.
-        small RUC: 20360945325
-        small Auxiliar Panamericana Nte. 439, Chimbote
-        span(class="ticket-number") Factura electrónica
-        strong F001-00000001
+        .title DIMEXSA S.A.C.
+        small.description RUC: 20360945325
+        .description
+            strong Dirección Fiscal:
+            span  Auxiliar Panamericana Nte. 439, Chimbote - Santa - Ancash
+        .description   
+            strong Punto de venta:
+            span  Auxiliar Panamericana Nte. 439, Chimbote - Santa - Ancash
+        .description dimexsa.msn.com - 999999999
+        .divider divider
+        .title Factura electrónica
+        .title F001-00000001
