--- a/src/pug/structure/_layout.pug
+++ b/src/pug/structure/_layout.pug
@@ -6,7 +6,7 @@ html(lang="en")
         meta(http-equiv="X-UA-Compatible", content="ie=edge")
         title Ticket Template
         link(rel="stylesheet", href="css/style.css")
-        link(rel="shortcut icon", href="images/avatar.png", type="image/x-icon")
+        link(rel="shortcut icon", href="images/icono.png", type="image/x-icon")
     body
         .ticket
             include _header
