--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -1,16 +1,13 @@
 .ticket {
     font-family: $text-font-stack;
-    padding: 10px;
     box-sizing: border-box;
     flex-direction: column;
     background: #fefefe;
-    line-height: 1.2em;
-    min-width:  300px;
-    border-radius: 5px;
-    width: 400px;
-    
+    line-height: 1.4em;
+    min-width: 300px;
+    width: 390px;
+    text-transform: uppercase;
     &__header {
-        padding: 5px;
         justify-content: center;
         &-logo {
             @include flexCenter;
@@ -28,14 +25,18 @@
             strong {
                 padding: .2em 0em;
             }
-            .ticket-number {
-                margin: .5em 0em 0em 0em;
-                font-weight: bolder;
-                text-transform: uppercase;
+            .left {
+                text-align: left !important;
             }
         }
+        .title {
+            font-weight: bold;
+            font-size: 1.4em;
+        }
+        .description {
+            font-size: 1em;
+        }
     }
-
     &__body {
         display: flex;
         flex-direction: column;
@@ -44,60 +45,62 @@
             margin-bottom: 10px;
         }
     }
-    
     &__footer {
         padding: 5px;
         text-align: center;
         display: flex;
         flex-direction: column;
     }
-
     table {
         width: 100%;
         border-collapse: collapse;
-
         .numeric {
             text-align: right;
+            padding-right: 1em;
         }
         tr {
-            td, th {
-                padding: 5px;
+            td,
+            th {
+                padding: .2em;
             }
         }
-        thead { 
+        thead {
+            tr {
+                border-top: 1px solid $light-grey;
+                border-bottom: 1px solid $light-grey;
+            }
             th {
                 text-transform: uppercase;
                 background: rgba($light-grey, .2);
             }
         }
-        tbody {
-            tr {
-                td {
-                    border-bottom: 1px solid $light-grey;
-                }
-            }
-        }
         tfoot {
-            text-align: right;
             td {
-                &:nth-child(1){
+                &:nth-child(1) {
                     font-weight: bold;
                 }
             }
         }
     }
-
     &__qr {
         text-align: center;
         margin: auto;
         display: flex;
         flex-direction: column;
         text-transform: capitalize;
+        justify-content: center;
         img {
-            min-width: 120px;
-            max-width: 120px;
+            min-width: 130px;
+            max-width: 130px;
         }
     }
+}
+
+.divider {
+    font-size: .2em;
+    content: "";
+    white-space: nowrap;
+    color: transparent;
 }
 
 .credits {
@@ -115,12 +118,12 @@
         font-weight: bold;
         color: #fefefe;
         text-decoration: none;
-        &:hover, &:focus {
+        &:hover,
+        &:focus {
             color: #cccccc;
         }
     }
 }
-
 
 @media print {
     body {
