--- a/src/pug/structure/_footer.pug
+++ b/src/pug/structure/_footer.pug
@@ -1,6 +1,3 @@
-.ticket__footer
-    small Autorizado mediante resolución N°1055/SUNAT.
-    small Consulte la válidez de este comprobante en <a href="https://e-consulta.sunat.gob.pe/ol-ti-itconsvalicpe/ConsValiCpe.htm">e-consulta.sunat.gob.pe/ol-ti-itconsvalicpe/ConsValiCpe.htm</a>
-    br
+.footer
     strong ~ DIMEXSA ~
     address Gracias por tu preferencia
