--- a/src/pug/structure/_header.pug
+++ b/src/pug/structure/_header.pug
@@ -1,8 +1,8 @@
 - var ColSpan = "3";
-.ticket__header
-    .ticket__header-logo
+.header
+    .header__logo
         img(src="images/logo.png")
-    .ticket__header-description
+    .header__description
         .title DIMEXSA S.A.C.
         small.description RUC: 20360945325
         .description
@@ -12,6 +12,6 @@
             strong Punto de venta:
             span  Auxiliar Panamericana Nte. 439, Chimbote - Santa - Ancash
         .description dimexsa.msn.com - 999999999
-        .divider divider
+    .header__number
         .title Factura electrónica
         .title F001-00000001
