--- a/src/pug/pages/invoice.pug
+++ b/src/pug/pages/invoice.pug
@@ -33,13 +33,13 @@ block content
                 tr
                     td SERVICIO DE TRANSPORTE DE GASOHOL 90 CALLAO - CAÑETE
                     td(class="numeric") 2.000
-                    td(class="numeric") GLI
+                    td(class="numeric") GL
                     td(class="numeric") 10.00
                     td(class="numeric") 20.00
                 tr
                     td GASOHOL 90
                     td(class="numeric") 2.000
-                    td(class="numeric") GLI
+                    td(class="numeric") GL
                     td(class="numeric") 10.00
                     td(class="numeric") 20.00
                 
