--- a/src/pug/structure/_header.pug
+++ b/src/pug/structure/_header.pug
@@ -9,9 +9,9 @@
             strong Dirección Fiscal:
             span  Auxiliar Panamericana Nte. 439, Chimbote - Santa - Ancash
         .description   
-            strong Punto de venta:
+            strong Sucural:
             span  Auxiliar Panamericana Nte. 439, Chimbote - Santa - Ancash
         .description dimexsa.msn.com - 999999999
     .header__number
-        .title Factura electrónica
-        .title F001-00000001
+        .title Boleta de Venta Electrónica
+        .title B001-00000001
