--- a/src/pug/structure/_invoice.pug
+++ b/src/pug/structure/_invoice.pug
@@ -8,7 +8,7 @@ html(lang="en")
         link(rel="stylesheet", href="css/style.css")
         link(rel="shortcut icon", href="images/icono.png", type="image/x-icon")
     body
-        .invoice
+        .pdf
             include _header
             block content
             include _footer
