--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -19,6 +19,7 @@
 // 5. Components
 // 6. Page-specific styles
 @import 'pages/ticket';
-@import 'pages/invoice';
+@import 'pages/pdf';
+@import 'pages/print';
 // 7. Themes
 @import 'themes/default';
