--- a/src/pug/structure/_header.pug
+++ b/src/pug/structure/_header.pug
@@ -4,14 +4,14 @@
         img(src="images/logo.png")
     .header__description
         .title DIMEXSA S.A.C.
-        small.description RUC: 20360945325
+        .ruc RUC: 20360945325
         .description
             strong Dirección Fiscal:
             span  Auxiliar Panamericana Nte. 439, Chimbote - Santa - Ancash
         .description   
             strong Sucural:
             span  Auxiliar Panamericana Nte. 439, Chimbote - Santa - Ancash
-        .description dimexsa.msn.com - 999999999
+        .email dimexsa.msn.com - 999999999
     .header__number
         .title Boleta de Venta Electrónica
         .title B001-00000001
